--- a/Bienes_RaicesMVC/package.json
+++ b/Bienes_RaicesMVC/package.json
@@ -20,7 +20,7 @@
   "license": "ISC",
   "devDependencies": {
     "autoprefixer": "^10.4.20",
-    "nodemon": "^3.1.4",
+    "nodemon": "^3.1.5",
     "postcss": "^8.4.45",
     "postcss-cli": "^11.0.0",
     "tailwindcss": "^3.4.11"
@@ -28,6 +28,7 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.20.0",
+    "express-validator": "^7.2.0",
     "mysql2": "^3.11.3",
     "pug": "^3.0.3",
     "sequelize": "^6.37.3"
