validacion completa del registro de usuario

--- a/Bienes_RaicesMVC/.env
+++ b/Bienes_RaicesMVC/.env
@@ -1,3 +1,11 @@
 BD_USER=root
 BD_PASSWORD=queso
 BD_HOST=localhost
+
+EMAIL_HOST=sandbox.smtp.mailtrap.io
+EMAIL_PORT=2525
+EMAIL_USER=e2c0fc989c3dfa
+EMAIL_PASS=f0e5363ca8570d
+
+
+BACKEND_URL=http://localhost
