--- a/Bienes_RaicesMVC/package.json
+++ b/Bienes_RaicesMVC/package.json
@@ -26,10 +26,15 @@
     "tailwindcss": "^3.4.11"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
+    "csurf": "^1.11.0",
     "dotenv": "^16.4.5",
     "express": "^4.20.0",
     "express-validator": "^7.2.0",
     "mysql2": "^3.11.3",
+    "nodemailer": "^6.9.15",
+    "pm2": "^5.4.2",
     "pug": "^3.0.3",
     "sequelize": "^6.37.3"
   }
