--- a/Bienes_RaicesMVC/package.json
+++ b/Bienes_RaicesMVC/package.json
@@ -32,6 +32,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.20.0",
     "express-validator": "^7.2.0",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.3",
     "nodemailer": "^6.9.15",
     "pm2": "^5.4.2",
