--- a/Bienes_RaicesMVC/package.json
+++ b/Bienes_RaicesMVC/package.json
@@ -8,8 +8,10 @@
     "start": "node ./index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon index.js",
-    "css": "postcss public/css/tailwind.css -o public/css/app.css --watch"
-  },
+    "css": "postcss public/css/tailwind.css -o public/css/app.css --watch",
+    "js":"webpack --watch",
+    "dev":"concurrently \"npm run js\" \"npm run css\" "
+  }, 
   "keywords": [
     "MVC",
     "PUG;",
@@ -23,11 +25,14 @@
     "nodemon": "^3.1.5",
     "postcss": "^8.4.45",
     "postcss-cli": "^11.0.0",
-    "tailwindcss": "^3.4.11"
+    "tailwindcss": "^3.4.11",
+    "webpack": "^5.94.0",
+    "webpack-cli": "^5.1.4"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
+    "csrf": "^3.1.0",
     "csurf": "^1.11.0",
     "dotenv": "^16.4.5",
     "express": "^4.20.0",
