--- a/Bienes_RaicesMVC/package.json
+++ b/Bienes_RaicesMVC/package.json
@@ -9,9 +9,11 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon index.js",
     "css": "postcss public/css/tailwind.css -o public/css/app.css --watch",
-    "js":"webpack --watch",
-    "dev":"concurrently \"npm run js\" \"npm run css\" "
-  }, 
+    "js": "webpack --watch",
+    "dev": "concurrently \"npm run js\" \"npm run css\" ",
+    "db:import":"node ./seed/seeder.js -i",
+    "db:delete":"node ./seed/seeder.js -d"
+  },
   "keywords": [
     "MVC",
     "PUG;",
@@ -22,6 +24,7 @@
   "license": "ISC",
   "devDependencies": {
     "autoprefixer": "^10.4.20",
+    "concurrently": "^9.0.1",
     "nodemon": "^3.1.5",
     "postcss": "^8.4.45",
     "postcss-cli": "^11.0.0",
